# 100-days-of-code-python

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  Python+Syntax+Cheat+Sheet+Booklet+v2.md  README.rst  band_name_generator.py  demo.py  pyproject.toml  pytest.ini  requirements_dev.txt  tox.ini  turtle_square.eps
.github/: ISSUE_TEMPLATE.md
day01/: band-name-generator.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/problems/: day_006.md
docs/solutions/: day_004.py  day_05.py  day_09_main.py
docs/solutions/day_07/: main.py
docs/solutions/day_22/: ball.py
docs/solutions/day_26/: main.py
docs/solutions/day_27/: playground.py
docs/solutions/day_40/: data_manager.py  main.py
src/days_of_code/: __init__.py  cli.py  day_001.py  day_003.py  day_004.py  day_006.py  day_007.py  day_009.py  day_019.py  day_02.py  day_03.py  day_04.py  day_05.py  day_08.py  day_18.py  day_25.py  day_32.py  day_55.py  days_of_code.py.bk
src/days_of_code/assets/: day_003_scenarios.json  day_004_rock_paper_scissors_ascii.json  (+1 more)
tests/: __init__.py  test_day_001.py  test_day_002.py  test_day_003.py  test_day_004.py  test_day_005.py  test_day_006.py  test_day_007.py  test_day_008.py  test_day_009.py  test_day_01.py  test_day_018.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_18.py.bk  test_day_32.py  test_day_55.py  test_days_of_code.py.bk
tests/assets/: day_006_algorithm.py  password_characters.json
(+5 files in other folders)
